# compare_fields

./: Cargo.toml  README.md
compare_fields/: Cargo.toml
compare_fields/src/: lib.rs
compare_fields_derive/: Cargo.toml
compare_fields_derive/src/: lib.rs
