[package]
name = "compare_fields"
description = "Field-by-field comparisons for structs and vecs"
documentation = "https://docs.rs/compare_fields"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
itertools = "0.14"

# Optional dependencies.
compare_fields_derive = { version = "0.1.1", path = "../compare_fields_derive", optional = true }

[features]
default = ["derive"]
derive = ["dep:compare_fields_derive"]
