[package]
name = "compare_fields_derive"
description = "Procedural macro for deriving the CompareFields trait"
documentation = "https://docs.rs/compare_fields_derive"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = "1.0"
